landing page beneficios

--- a/src/app/pages/landingpage/landingpage.component.html
+++ b/src/app/pages/landingpage/landingpage.component.html
@@ -4,6 +4,7 @@
     <h1 class="font-semibold text-9xl text-white">Patrify</h1>
     <p class="text-white text-[28px] relative right-[38px] bottom-4 text-nowrap">Gestão de Bens e Ativos</p>
     <button (click)="login()">Login/Registro</button>
+    <img src="../../../assets/imgs/scrollicon.png" class="animate-bounce">
   </div>
 </div>     
 <div class="contentOne">
@@ -14,4 +15,35 @@
     <p>Patrify é um gestor de bens e ativos que facilita a adição e organização de patrimônios em empresas. Com uma interface intuitiva, permite gerar números de série únicos e criar QR codes, oferecendo uma solução prática para o controle eficiente de ativos.</p>
   </div>
 </div>     
+<div class="contentTwo">
+  <div class="contentTwo-title">
+    <h1 class="font-bold" id="outtext">BENEFÍCIOS</h1>
+  </div>
+  <div class="contentTwo-cards">
+    <div class="card">
+      <h1>Gestão Eficiente de Ativos:</h1>
+      <p>Organização e Controle.</p>
+    </div>
+    <div class="card">
+      <h1>Facilidade de Uso:</h1>
+      <p>Interface amigável e Responsiva.</p>
+    </div>
+    <div class="card">
+      <h1>Automatização de Processos:</h1>
+      <p>Geração de códigos de série e QR codes.</p>
+    </div>
+    <div class="card">
+      <h1>Integração com APIs inteligentes:</h1>
+      <p>Economizando tempo do Usuário.</p>
+    </div>
+  </div>
+</div>
+<div class="contentThree">
+  <div class="contentThree-wave">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#262626" fill-opacity="1" d="M0,256L18.5,240C36.9,224,74,192,111,176C147.7,160,185,160,222,170.7C258.5,181,295,203,332,181.3C369.2,160,406,96,443,106.7C480,117,517,203,554,208C590.8,213,628,139,665,122.7C701.5,107,738,149,775,181.3C812.3,213,849,235,886,213.3C923.1,192,960,128,997,96C1033.8,64,1071,64,1108,80C1144.6,96,1182,128,1218,170.7C1255.4,213,1292,267,1329,282.7C1366.2,299,1403,277,1422,266.7L1440,256L1440,0L1421.5,0C1403.1,0,1366,0,1329,0C1292.3,0,1255,0,1218,0C1181.5,0,1145,0,1108,0C1070.8,0,1034,0,997,0C960,0,923,0,886,0C849.2,0,812,0,775,0C738.5,0,702,0,665,0C627.7,0,591,0,554,0C516.9,0,480,0,443,0C406.2,0,369,0,332,0C295.4,0,258,0,222,0C184.6,0,148,0,111,0C73.8,0,37,0,18,0L0,0Z"></path></svg>
+  </div>
+  <div class="contentThree-functions">
+      <h1>FUNCIONALIDADES</h1>
+  </div>
+</div>
 </body>              
