--- a/src/app/pages/landingpage/landingpage.component.scss
+++ b/src/app/pages/landingpage/landingpage.component.scss
@@ -143,7 +143,7 @@ body {
 
 .contentThree {
     width: 100%;
-    height: 100vh;
+    height: 150vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -151,11 +151,30 @@ body {
     
     .contentThree-functions {
         display: flex;
-        justify-content: center;
+        padding-left: 50px;
         width: 100%;
         height: 100%;
+
+    
+        .contentThree-title {
+            display: flex;
+            width: 100%;
+            height: 100px;
+            
+            h1 {
+                font-size: 75px;
+                font-weight: bold;
+                background-clip: text;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                color: white;
+                background-image: linear-gradient(to right top, #4c1084, #740686, #970086, #b60084, #e0116c, #fb4250, #ff7131, #ff9e00);
+            }
+        }
     }
 }
+
+
 
 @media screen and (max-width: 648px) {
     .wallpaper {
@@ -230,6 +249,18 @@ body {
            }
             
         }
+
+    }
+    .contentThree {
+
+        .contentThree-functions {
+            justify-content: center;
+            padding-left: 0;
+            h1 {
+                font-size: 32px;
+                
+            }
+        }
     }
     }
 
@@ -267,6 +298,17 @@ body {
             #outtext {
                 font-size: 72px;
                 -webkit-text-stroke: 4px transparent;
+            }
+        }
+    }
+
+    .contentThree {
+
+        .contentThree-functions {
+            justify-content: center;
+            padding-left: 0;
+            h1 {
+                font-size: 50px;   
             }
         }
     }
