--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
             <form action="" id="formLogin" (submit)="LoginUser()">
                 <div class="form-group">
                     <label for="email">CNPJ:</label>
-                    <input type="text" name="cnpj" id="cnpj" class="input-login" required>
+                    <input type="text" name="cnpj" id="cnpj" class="input-login" required maxlength="14">
                 </div>
                 <div class="form-group">
                     <label for="password">Senha:</label>
@@ -26,7 +26,7 @@
                 <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
                 <div class="form-group" id="cnpjBox">
                     <label for="cnpj">CNPJ:</label>
-                    <input type="text" name="cnpj" id="cnpjreg" class="input-login" required>
+                    <input type="text" name="cnpj" id="cnpjreg" class="input-login" required maxlength="14">
                 </div>
                 <div class="form-group">
                     <label for="email">Email Empresarial:</label>
