--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -23,3 +23,8 @@ body {
 h1, p {
     display: inline; /* Isso força os títulos a ficarem na mesma linha */
 }
+
+
+#myChart{
+    background-color: #36007e;
+}
