--- a/src/app/pages/descarte/descarte.component.html
+++ b/src/app/pages/descarte/descarte.component.html
@@ -49,7 +49,7 @@
                 {{local.contato}}
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 w-1/5" id="site">
-                <a href="{{local.website}}" target="_blank">{{local.website.substring(0, 20)}}</a>
+                <a href="{{local.website}}" target="_blank">{{local.website}}</a>
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 w-1/5" id="url">
                 <a href="{{local.url}}" target="_blank"><button>Ir para o Local</button></a>
