--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,5 +8,8 @@
                 <p class="text-2xl font-semibold" >  |  Seu gerenciador de patrimônios físicos  |  </p>
             </div>
         </header>
+        <app-chart></app-chart>
     </div>
+
+
 </body>
