--- a/src/app/pages/landingpage/landingpage.component.html
+++ b/src/app/pages/landingpage/landingpage.component.html
@@ -45,7 +45,44 @@
   <div class="contentThree-functions">
     <div class="contentThree-title">
       <h1 id="contentThree-title">FUNCIONALIDADES</h1>
+      <div class="titleLine"></div>
+    </div>
+  
+    <div class="contentThree-list">
+      <div class = "main">
+        <div class = "column expanded"> 
+          <div class = "inner-element active">
+            <h2>INVENTÁRIO</h2>
+            <p>O inventário do Patrify é uma ferramenta para gerenciar bens e ativos, permitindo adicionar e visualizar itens com códigos de série e QR codes automáticos. Além de incluir filtros para melhor organização.</p>          
+          </div>
+          <div class="icons"><p>1</p></div>
+        </div>
+          <div class = "column"> 
+          <div class = "inner-element">
+            <h2>PÁGINA DO USUÁRIO</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.       Ut elit tellus, luctus nec ullamcorper mattis, pulvinar           dapibus leo.Lorem ipsum dolor sit amet, consectetur               adipiscing elit. Ut elit tellus, luctus nec ullamcorper           mattis, pulvinar dapibus leo.</p>
+          </div>
+            <div class="icons"><p>2</p></div>
+        </div>
+          <div class = "column"> 
+          <div class = "inner-element">
+            <h2>DESCARTE INTELIGENTE</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.       Ut elit tellus, luctus nec ullamcorper mattis, pulvinar           dapibus leo.Lorem ipsum dolor sit amet, consectetur               adipiscing elit. Ut elit tellus, luctus nec ullamcorper           mattis, pulvinar dapibus leo.</p>
+          </div>
+            <div class="icons"><p>3</p></div>
+        </div>
+          <div class = "column"> 
+          <div class = "inner-element">
+            <h2>GRÁFICOS</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.       Ut elit tellus, luctus nec ullamcorper mattis, pulvinar           dapibus leo.Lorem ipsum dolor sit amet, consectetur               adipiscing elit. Ut elit tellus, luctus nec ullamcorper           mattis, pulvinar dapibus leo.</p>
+          </div>
+            <div class="icons"><p>4</p></div>
+        </div>
+      </div>
     </div>
   </div>
+</div>
+<div class="contentFour">
+  hello world
 </div>
 </body>              
