--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Senha:</label>
-                    <input type="text" name="password" id="password" class="input-login" required>
+                    <input type="password" name="password" id="password" class="input-login" required>
                 </div>
                 <a id="forgotPassword" href="/senha">Esqueci a Senha</a>
                 <button type="submit">Entrar</button>
