função editar e deletar patrimonio

--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -9,6 +9,7 @@
           <tr>
             <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider">Imagem</th>
             <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider">Nome</th>
+            <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider">Categoria</th>
             <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider">Status</th>
             <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider" id="local">
               Localização</th>
@@ -18,7 +19,7 @@
             </th>
             <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider"
               id="conservacao">Conservação</th>
-            <th scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider">Ações</th>
+            <th colspan="2" scope="col" class="px-6 py-3 text-left font-bold text-gray-500 uppercase tracking-wider">Ações</th>
           </tr>
         </thead>
         <tbody class="bg-white divide-y divide-gray-200 transition-colors ">
@@ -33,12 +34,17 @@
             </td>
 
             <td class="px-6 py-4 whitespace-nowrap relative">
-              <span *ngIf="!editMode" class="text-sm text-gray-900">{{ patrimonio.patr_name }}</span>
+              <span *ngIf="!patrimonio.editMode" class="text-sm text-gray-900">{{ patrimonio.patr_name }}</span>
               <input *ngIf="patrimonio.editMode" type="text" [(ngModel)]="patrimonio.patr_name" class="absolute top-0 left-0 px-6 py-4 text-sm text-gray-500 bg-transparent border-none w-full h-full" />
             </td>
 
             <td class="px-6 py-4 whitespace-nowrap relative">
-              <span *ngIf="!editMode && !patrimonio.editMode" class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full " [ngClass]="{
+              <span *ngIf="!patrimonio.editMode" class="text-sm text-gray-900">{{ patrimonio.patr_tipo }}</span>
+              <input *ngIf="patrimonio.editMode" type="text" [(ngModel)]="patrimonio.patr_tipo" class="absolute top-0 left-0 px-6 py-4 text-sm text-gray-500 bg-transparent border-none w-full h-full" />
+            </td>
+
+            <td class="px-6 py-4 whitespace-nowrap relative">
+              <span *ngIf="!patrimonio.editMode" class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full " [ngClass]="{
                   'bg-green-100 text-green-800': patrimonio.patr_ativoinativo === 'Ativo',
                   'bg-red-100 text-red-800': patrimonio.patr_ativoinativo === 'Não ativo'
               }">{{patrimonio.patr_ativoinativo}}</span>
@@ -48,26 +54,40 @@
               </select>
           </td>
           
-          
-          
-          
             <td class="px-6 py-4 whitespace-nowrap relative" id="local">
-              <span  *ngIf="!editMode" class="text-sm text-gray-900">{{patrimonio.patr_local}}</span>
+              <span  *ngIf="!patrimonio.editMode" class="text-sm text-gray-900">{{patrimonio.patr_local}}</span>
               <input *ngIf="patrimonio.editMode" type="text" [(ngModel)]="patrimonio.patr_local" class="absolute top-0 left-0 px-6 py-4 text-sm text-gray-500 bg-transparent border-none w-full h-full" />
             </td>
 
             <td class="relative">
-              <span *ngIf="!editMode" class="px-6 py-4 whitespace-nowrap text-sm text-gray-500" id="valor">{{ patrimonio.patr_valor }}</span>
+              <span *ngIf="!patrimonio.editMode" class="px-6 py-4 whitespace-nowrap text-sm text-gray-500" id="valor">{{ patrimonio.patr_valor }}</span>
               <input *ngIf="patrimonio.editMode" type="text" [(ngModel)]="patrimonio.patr_valor" class="absolute top-0 left-0 px-6 py-4 text-sm text-gray-500 bg-transparent border-none w-full h-full" />
             </td>
           
-            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500" id="data">
-              {{patrimonio.date}}
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 relative" id="data">
+              <span *ngIf="!patrimonio.editMode" class="text-sm text-gray-900">
+                {{patrimonio.date}}
+              </span>
+              <input *ngIf="patrimonio.editMode" type="date" [(ngModel)]="patrimonio.date" class="absolute top-0 left-0 px-6 py-4 text-sm text-gray-500 bg-transparent border-none w-full h-full" />
             </td>
-            <td class="px-6 py-4 whitespace-nowrap" id="conservacao">
-              <span
-                class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">{{patrimonio.patr_depreciacao}}</span>
+
+            <td class="px-6 py-4 whitespace-nowrap relative" id="conservacao">
+              <!-- Elemento de exibição normal -->
+              <span *ngIf="!patrimonio.editMode" class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">
+                {{patrimonio.patr_depreciacao}}
+              </span>
+            
+              <!-- Elemento de edição -->
+              <select *ngIf="patrimonio.editMode" [(ngModel)]="patrimonio.patr_depreciacao" class="absolute top-0 left-0 px-6 py-4 text-sm text-gray-500 bg-transparent border-none w-full h-full z-10">
+                <option value="Novo">Novo</option>
+                <option value="Excelente">Excelente</option>
+                <option value="Regular">Regular</option>
+                <option value="Com defeitos">Com defeitos</option>
+                <option value="Obsoleto">Obsoleto</option>
+                <option value="Descartado">Descartado</option>
+              </select>
             </td>
+            
             <!-- Campos de edição, exibidos apenas no modo de edição -->
            
             <!-- Botões de ação, alternando entre Editar e Salvar -->
@@ -79,6 +99,7 @@
               <button *ngIf="patrimonio.editMode" (click)="saveChanges(patrimonio)">Salvar</button>
 
             </td>
+            <td><button (click)="deletarPatrimonio(patrimonio)">Deletar</button></td>
           </tr>
           <!-- Row 2, 3, ... -->
         </tbody>
