--- a/src/app/pages/home/chart/chart.component.html
+++ b/src/app/pages/home/chart/chart.component.html
@@ -1,8 +1,14 @@
 <div class="row">
     <div class="col">
-        <h2>chart</h2>
+        <h2>Gráfico Numero de tipos de patrimonios</h2>
         <div class="canvas-container">
-            <canvas id="piechart"></canvas>
+            <canvas id="typechart"></canvas>
+        </div>
+    </div>
+    <div class="col">
+        <h2>Gráfico numero de Patrimônios ativos e inativos</h2>
+        <div class="canvas-container">
+            <canvas id="activechart"></canvas>
         </div>
     </div>
 </div>
