userpage atividade econ.

--- a/src/app/pages/userpage/userpage.component.html
+++ b/src/app/pages/userpage/userpage.component.html
@@ -41,7 +41,7 @@
                         <h2 class="text-lg font-semibold text-gray-800">Sobre mim</h2>
                         <div>
                             
-                            <p>Atividade Econômica: {{user.atividadeEconomica}} </p>
+                            <p>Atividade Econômica: {{user.atividadeeconomica}} </p>
                             <p>ENDEREÇO: {{user.user_endereco}}</p>
                             <!-- Adicione os outros campos que deseja exibir aqui -->
                         </div>
