--- a/src/app/pages/userpage/userpage.component.html
+++ b/src/app/pages/userpage/userpage.component.html
@@ -27,7 +27,7 @@
                             <div class="text-white">
                                 
                                 <h2 class="text-2xl font-semibold">Nome: {{user.user_name}}</h2>
-                                <p class="text-sm">Razão Social: {{user.user_razaoSocial}}</p>
+                                <p class="text-sm">Razão Social: {{user.user_razaosocial}}</p>
                                 <p class="text-sm">CNPJ: {{user.user_cnpj}}</p>
                                 <p class="text-sm">Telefone 1: {{user.user_telefone1}}</p>
                                 <p class="text-sm">Telefone 2: {{user.user_telefone2}}</p>
