--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,8 +4,8 @@
         <header class="bg-white shadow-md py-4 px-6 mb-4 flex justify-between items-center">
             <h1 class="text-2xl font-semibold" id="titulo-header">{{ currentRoute }}</h1>
             <div class="text-center"> <!-- Centraliza o conteúdo do texto -->
-                <h1 class="text-2xl font-semibold" >  |  Bem-vindo ao Patrify  |  </h1> mes de maio
-                <p class="text-2xl font-semibold" >  |  Seu gerenciador de patrimônios físicos  |  </p>
+                <h1 class="text-2xl font-semibold" >   Bem-vindo ao Patrify    </h1>
+                <p class="text-2xl font-semibold" >    Seu gerenciador de patrimônios físicos    </p>
             </div>
         </header>
         <app-chart></app-chart>
