--- a/src/app/pages/landingpage/landingpage.component.scss
+++ b/src/app/pages/landingpage/landingpage.component.scss
@@ -78,17 +78,35 @@ body {
         height: 100%;
         font-size: 28px;
         padding: 1rem;
-        background-color: #300030;
-        color: #f5174e;
+        background-color: #d6d6d6;
+        color: black;
     }
 }
+
+.patterns {
+    position: absolute;
+    width: 99vw;
+    height: 100vh;
+
+    .patternDot {
+        position: relative;
+        height: 300px;
+        width: 300px;
+        top: -100px;
+        left: 50px;
+        background-image: radial-gradient(#000000 1px, transparent 1px);
+background-size: 12px 12px;
+background-color: rgba(255, 255, 255, 0);
+    }
+}
+
 
 .contentTwo {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100vh;
-    background-color: #262626;
+    height: 75vh;
+    background-color: #d6d6d6;
 
     .contentTwo-title {
         display: flex;
@@ -100,14 +118,14 @@ body {
         gap: 20px;
 
         #outtext {
-            font-size: 100px;
-            font-family: 'Intro', sans-serif;
-            font-weight: 800;
-            text-transform: uppercase; 
-            background: -webkit-linear-gradient(-86deg, #8400ff 5%, #ea305f 53%, #ff9e00 91%);
+            position: relative;
+            font-size: 150px;
+            font-weight: 800; 
+            top: 100px;
+            background: linear-gradient(to right top, #4c1084, #740686, #970086, #b60084, #e0116c, #fb4250, #ff7131, #ff9e00);
             -webkit-background-clip: text;
-            -webkit-text-stroke: 4px transparent;
-            color: #232d2d;
+            -webkit-text-stroke: 6px transparent;
+            color: #d6d6d6;
         }
     }
 
@@ -119,6 +137,8 @@ body {
         width: 100%;
         height: 75%;
         gap: 1rem;
+        position: relative;
+        top: 100px;
 
         .card {
             display: flex;
@@ -152,7 +172,7 @@ body {
     overflow: hidden;
     flex-direction: column;
     justify-content: center;
-    background-color: #333333;
+    background-color: #cccccc;
 
 
     .contentThree-functions {
@@ -173,7 +193,7 @@ body {
             h1 {
                 font-size: 75px;
                 font-weight: bold;
-                color: #a3a3a3;
+                color: black;
             }
     
             .titleLine {
@@ -254,7 +274,7 @@ body {
               
               .column:nth-child(4) {
                 
-                background-image: url('http://dmmotionarts.com/wp-content/uploads/2024/01/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg');
+                // background-image: url('http://dmmotionarts.com/wp-content/uploads/2024/01/pietro-de-grandi-T7K4aEPoGGk-unsplash.jpg');
                 background-size:cover;
                 background-position:center center;
                 border-radius: 0px 10px 10px 0px;
@@ -394,7 +414,12 @@ body {
     
 .contentFour {
     width: 100vw;
-    height: 100vh;
+    height: 75vh;
+}
+
+.contentFive {
+    width: 100vw;
+    height: 75vh;
 }
 
 
@@ -443,8 +468,10 @@ body {
             font-size: 14px;
         }
     }
-    
+   
     .contentTwo {
+
+        
         .contentTwo-title {
             #outtext {
                 font-size: 42px;
