--- a/src/app/pages/home/chart/chart.component.html
+++ b/src/app/pages/home/chart/chart.component.html
@@ -1,14 +1,29 @@
-<div class="row">
-    <div class="col">
+<div class="grid">
+    <div class="graf1">
         <h2>Gráfico Numero de tipos de patrimonios</h2>
         <div class="canvas-container">
             <canvas id="typechart"></canvas>
         </div>
     </div>
-    <div class="col">
+    <div class="graf2">
         <h2>Gráfico numero de Patrimônios ativos e inativos</h2>
         <div class="canvas-container">
             <canvas id="activechart"></canvas>
         </div>
+    </div>
+    <div class="graf3">
+        <h2>Gráfico numero de Patrimônios ativos e inativos</h2>
+        <div class="canvas-container">
+            <canvas id="activechart"></canvas>
+        </div>
+    </div>
+    <div class="info1">
+        <h1></h1>
+    </div>
+    <div class="info2">
+        <h1></h1>
+    </div>
+    <div class="info3">
+        <h1></h1>
     </div>
 </div>
